Auntenticación - Adminitración de Usuarios - Modulo Animales

--- a/ProyectoMancariBlue/appsettings.json
+++ b/ProyectoMancariBlue/appsettings.json
@@ -1,9 +1,18 @@
 {
+  "SmtpSettings": {
+    "Server": "smtp-mail.outlook.com",
+    "Port": 587,
+    "Username": "mancariblue@outlook.com",
+    "Password": "Mancari123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MancariBlueContext": "Data Source = DESKTOP-SM0AKDU\\SQLEXPRESS; Initial Catalog=MancariBlueDB; Persist Security Info=False; Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "AllowedHosts": "*"
 }
