--- a/ProyectoMancariBlue/appsettings.json
+++ b/ProyectoMancariBlue/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "ConnectionStrings": {
-    "MancariBlueContext": "Data Source = ARI-LAPTOP\\SQLEXPRESS; Initial Catalog=MancariBlueDB; Persist Security Info=False; Trusted_Connection=True;MultipleActiveResultSets=True"
+    "MancariBlueContext": "Data Source = DESKTOP-SM0AKDU\\SQLEXPRESS; Initial Catalog=MancariBlueDB; Persist Security Info=False; Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "AllowedHosts": "*"
 }
