--- a/ProyectoMancariBlue/appsettings.json
+++ b/ProyectoMancariBlue/appsettings.json
@@ -1,9 +1,9 @@
 {
   "SmtpSettings": {
-    "Server": "smtp-mail.outlook.com",
+    "Server": "smtp.gmail.com",
     "Port": 587,
-    "Username": "mancariblue@outlook.com",
-    "Password": "Mancari123"
+    "Username": "mancariblue59@gmail.com",
+    "Password": "givmraxerbxonkhn"
   },
   "Logging": {
     "LogLevel": {
