--- a/ProyectoMancariBlue/appsettings.json
+++ b/ProyectoMancariBlue/appsettings.json
@@ -12,7 +12,7 @@
     }
   },
   "ConnectionStrings": {
-    "MancariBlueContext": "Data Source = DESKTOP-SM0AKDU\\SQLEXPRESS; Initial Catalog=MancariBlueQA; Persist Security Info=False; Trusted_Connection=True;MultipleActiveResultSets=True"
+    "MancariBlueContext": "Server=tcp:mancariblue.database.windows.net,1433;Initial Catalog=MancariBlueDB;Persist Security Info=False;User ID=Administrador;Password=Mancari123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*"
 }
